--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <ul class="nav-menu list-unstyled">
             <li><a href="#header" class="smoothScroll">Home</a></li>
-            <li><a href="#about" class="smoothScroll">About</a></li>
+            <li><a href="#about" class="smoothScroll">About Me</a></li>
             <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
             <li><a href="#journal" class="smoothScroll">Blog</a></li>
             <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -106,15 +106,16 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">
-                im machine learning engineer who loves to code, read research
+                Im machine learning engineer who loves to code, read research
                 papers and implement it. acquainted with exquisite data
                 analytics skills to come up with fruitful insight from data.
               </p>
               <p class="separator">
-                To an English person, it will seem like simplified English, as a
-                skeptical Cambridge friend of mine told me what Occidental is.
-                The European languages are members of the same family.English
-                person.
+                Extensive experience in building machine learning solutions
+                <br />
+                from scratch and deploy it on cloud services like Amazon, GCP
+                and Azure. More than 4 years of experience in building python
+                based solutions
               </p>
             </div>
           </div>
@@ -128,38 +129,41 @@
       <div class="container">
         <div class="services-carousel owl-theme">
           <div class="services-block">
-            <i class="ion-ios-browsers-outline"></i>
-            <span>UI/UX DESIGN</span>
+            <i class="ion-android-cloud-done"></i>
+            <span>Cloud solutions</span>
             <p class="separator">
-              To an English person, it will seem like simplified English,told me
-              what
+              Skillful in moving applications to cloud. So far in my experience
+              I have deployed machine learning applications on Google AI
+              Platform, Amazon Sagemaker and Microsoft ML Studio.
+            </p>
+          </div>
+
+          <div class="services-block">
+            <i class="ion-social-python"></i>
+            <span>Python Development</span>
+            <p class="separator">
+              Having more than 4 years of experience. Developed various
+              solutions using python ranging from machine learning, scrapping,
+              networking to automation.
+            </p>
+          </div>
+
+          <div class="services-block">
+            <i class="ion-ios-color-wand"></i>
+            <span>Machine Learning</span>
+            <p class="separator">
+              Expertise in making business smart by leveraging the power of
+              machine learning. Just tell me the business process I will make it
+              smart using machine learning
             </p>
           </div>
 
           <div class="services-block">
             <i class="ion-ios-lightbulb-outline"></i>
-            <span>BRAND IDENTITY</span>
+            <span>Deep Learning</span>
             <p class="separator">
-              To an English person, it will seem like simplified English,told me
-              what
-            </p>
-          </div>
-
-          <div class="services-block">
-            <i class="ion-ios-color-wand-outline"></i>
-            <span>WEB DESIGN</span>
-            <p class="separator">
-              To an English person, it will seem like simplified English,told me
-              what
-            </p>
-          </div>
-
-          <div class="services-block">
-            <i class="ion-social-android-outline"></i>
-            <span>MOBILE APPS</span>
-            <p class="separator">
-              To an English person, it will seem like simplified English,told me
-              what
+              Strong experience in state of art deep learning models.
+              Implemented ARMDN research paper from scratch using Tensorflow.
             </p>
           </div>
 
@@ -167,17 +171,28 @@
             <i class="ion-ios-analytics-outline"></i>
             <span>Analytics</span>
             <p class="separator">
-              To an English person, it will seem like simplified English,told me
-              what
+              Expertise in turning garbage data into effective strategy. Mastery
+              in presenting numbers into effective presentation using PowerBI,
+              to assist executives in helping decision making.
             </p>
           </div>
 
           <div class="services-block">
-            <i class="ion-ios-camera-outline"></i>
-            <span>PHOTOGRAPHY</span>
+            <i class="ion-hammer"></i>
+            <span>Web Scrapping</span>
             <p class="separator">
-              To an English person, it will seem like simplified English,told me
-              what
+              When provided data isn't enough, scrapping scrapping comes to
+              assist in creating large amount of data. Scrapped website and
+              social platform sites using famous and powerful python libraries.
+            </p>
+          </div>
+          <div class="services-block">
+            <i class="ion-ios-browsers-outline"></i>
+            <span>Django Web and REST API</span>
+            <p class="separator">
+              Helping startup by giving life to their dreams using famous web
+              framework Django. Hands on experience in building Django REST
+              framework for creating REST API's.
             </p>
           </div>
         </div>
