added gradient navigation

--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
                 analytics skills to come up with fruitful insight from data.
               </p>
               <p class="separator">
+                Extensive experience in building machine learning solutions from
+                scratch and deploy it on cloud services like Amazon, GCP and
+                Azure. More than 4 years of experience in building python based
+                solutions
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end section about us -->
+
+    <!-- start section experience us -->
+    <div id="experience" class="experience">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-10">
+            <div class="about-descr">
+              <p class="p-heading">
+                Work Experience
+              </p>
+              <p class="separator">
                 Extensive experience in building machine learning solutions
                 <br />
                 from scratch and deploy it on cloud services like Amazon, GCP
