modified experience and educatio section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <ul class="nav-menu list-unstyled">
             <li><a href="#header" class="smoothScroll">Home</a></li>
             <li><a href="#about" class="smoothScroll">About Me</a></li>
+            <li><a href="#experience" class="smoothScroll">experience</a></li>
+            <li><a href="#education" class="smoothScroll">education</a></li>
             <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
             <li><a href="#journal" class="smoothScroll">Blog</a></li>
             <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -123,28 +125,70 @@
     </div>
     <!-- end section about us -->
 
-    <!-- start section experience us -->
+    <!-- start section experience-->
     <div id="experience" class="experience">
       <div class="container">
         <div class="row justify-content-between">
-          <div class="col-lg-10">
+          <div class="col-lg-12">
             <div class="about-descr">
               <p class="p-heading">
                 Work Experience
               </p>
+              <div ><img src="images/system.jpeg" /><br>
+                <p class="company">
+                  Machine Learning Engineer 
+                </p> 
+                <p class="job-date">
+                  | June 2018 - Present
+                </p>
+              </div>
               <p class="separator">
-                Extensive experience in building machine learning solutions
-                <br />
-                from scratch and deploy it on cloud services like Amazon, GCP
-                and Azure. More than 4 years of experience in building python
-                based solutions
+               Working as full time machine learning engineer in top I.T firm of Pakistan.
+               Successfully led and completed various sales forecasting and computer vision
+               projects. My roles ranges from analyzing data, performing eda, to creating complete
+               machine/deep learning pipeline. Besides development also deployed model on 
+               cloud services like Amazon Sagemaker, Google AI Platform and Microsoft Azure.
+               So far built solutions for diverse industries like retail, mortgage, apparel
+               and computer vision. 
               </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- end section about us -->
+    <!-- end section experience -->
+
+    <!-- start education-->
+    <div id="education" class="education">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-12">
+            <div class="about-descr">
+              <p class="p-heading">
+                Education
+              </p>
+              <div ><img src="images/nuces.png" /><br>
+                <p class="school">
+                  Bachelor of Computer Science
+                </p> 
+                <p class="job-date">
+                  | 2013 - 2018
+                </p>
+              </div>
+              <p class="separator">
+               Earned bachelor degree from prestigious education institute of Pakistan.
+               My degree majors include data science, machine learning and AI. During 
+               university time I was active student and participated in numerous 
+               speed programming and sports competition. My Final Year Project was 
+               intelligent chatbot targeted Telecom industry to replace their customer 
+               support agent. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end education -->
 
     <!-- start section services -->
     <div id="services">
@@ -379,7 +423,7 @@
     </div>
     <!-- End section journal -->
 
-    <!-- start sectoion contact -->
+    <!-- start section contact -->
     <div id="contact" class="paddsection">
       <div class="container">
         <div class="contact-block1">
@@ -506,7 +550,7 @@
           </ul>
         </div>
 
-        <p>&copy; Copyrights Folio. All rights reserved.</p>
+        <p>&copy; Copyrights WolfOfAI. All rights reserved.</p>
 
         <div class="credits">
           <!--
@@ -515,7 +559,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
         -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by WolfOfAI</a>
         </div>
       </div>
     </div>
