updated contact infor

--- a/index.html
+++ b/index.html
@@ -158,38 +158,6 @@
     </div>
     <!-- end section experience -->
 
-    <!-- start education-->
-    <div id="education" class="education">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-12">
-            <div class="about-descr">
-              <p class="p-heading">
-                Education
-              </p>
-              <div ><img src="images/nuces.png" /><br>
-                <p class="school">
-                  Bachelor of Computer Science
-                </p> 
-                <p class="job-date">
-                  | 2013 - 2018
-                </p>
-              </div>
-              <p class="separator">
-               Earned bachelor degree from prestigious education institute of Pakistan.
-               My degree majors include data science, machine learning and AI. During 
-               university time I was active student and participated in numerous 
-               speed programming and sports competition. My Final Year Project was 
-               intelligent chatbot targeted Telecom industry to replace their customer 
-               support agent. 
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- end education -->
-
     <!-- start section services -->
     <div id="services">
       <div class="container">
@@ -265,6 +233,38 @@
       </div>
     </div>
     <!-- end section services -->
+
+    <!-- start education-->
+    <div id="education" class="education">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-12">
+            <div class="about-descr">
+              <p class="p-heading">
+                Education
+              </p>
+              <div ><img src="images/nuces.png" /><br>
+                <p class="school">
+                  Bachelor of Computer Science
+                </p> 
+                <p class="job-date">
+                  | 2013 - 2018
+                </p>
+              </div>
+              <p class="separator">
+               Earned bachelor degree from prestigious education institute of Pakistan.
+               My degree majors include data science, machine learning and AI. During 
+               university time I was active student and participated in numerous 
+               speed programming and sports competition. My Final Year Project was 
+               intelligent chatbot targeted Telecom industry to replace their customer 
+               support agent. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end education -->
 
     <!-- start section portfolio -->
     <div id="portfolio" class="text-center paddsection">
@@ -433,15 +433,14 @@
                 <h2 class="mb-30">GET IN TOUCH</h2>
 
                 <ul class="contact-details">
-                  <li><span>23 Main, Street</span></li>
-                  <li><span>New York, United States</span></li>
-                  <li><span>+88 01912704287</span></li>
-                  <li><span>example@example.com</span></li>
+                  <li><span>You can reach me on </span></li>
+                  <li><i class="ion-ios-telephone"></i> <span>+923178965910</span></li>
+                  <li><i class="ion-email"></i>  <span>umaramanat66@gmail.com</span></li>
                 </ul>
               </div>
             </div>
 
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
               <form action="" method="post" role="form" class="contactForm">
                 <div class="row">
                   <div id="sendmessage">
@@ -517,7 +516,7 @@
                   </div>
                 </div>
               </form>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
