+1. Add IS and RC work experience

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li><a href="#experience" class="smoothScroll">experience</a></li>
             <li><a href="#education" class="smoothScroll">education</a></li>
             <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-            <li><a href="#journal" class="smoothScroll">Blog</a></li>
+            <!-- <li><a href="#journal" class="smoothScroll">Blog</a></li> -->
             <li><a href="#contact" class="smoothScroll">Contact</a></li>
           </ul>
         </div>
@@ -125,42 +125,12 @@
     </div>
     <!-- end section about us -->
 
-    <!-- start section experience-->
-    <div id="experience" class="experience">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-12">
-            <div class="about-descr">
-              <p class="p-heading">
-                Work Experience
-              </p>
-              <div ><img src="images/system.jpeg" /><br>
-                <p class="company">
-                  Machine Learning Engineer 
-                </p> 
-                <p class="job-date">
-                  | June 2018 - Present
-                </p>
-              </div>
-              <p class="separator">
-               Working as full time machine learning engineer in top I.T firm of Pakistan.
-               Successfully led and completed various sales forecasting and computer vision
-               projects. My roles ranges from analyzing data, performing eda, to creating complete
-               machine/deep learning pipeline. Besides development also deployed model on 
-               cloud services like Amazon Sagemaker, Google AI Platform and Microsoft Azure.
-               So far built solutions for diverse industries like retail, mortgage, apparel
-               and computer vision. 
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- end section experience -->
-
     <!-- start section services -->
     <div id="services">
       <div class="container">
+        <!-- <p class="p-heading">
+          Services
+        </p> -->
         <div class="services-carousel owl-theme">
           <div class="services-block">
             <i class="ion-android-cloud-done"></i>
@@ -234,6 +204,69 @@
     </div>
     <!-- end section services -->
 
+    <!-- start section experience-->
+    <div id="experience" class="experience">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-12">
+            <div class="about-descr">
+              <p class="p-heading">
+                Work Experience
+              </p>
+              <div ><img src="images/system.jpeg" /><br>
+                <p class="company">
+                  Machine Learning Engineer 
+                </p> 
+                <p class="job-date">
+                  | June 2018 - Present
+                </p>
+              </div>
+              <p class="separator">
+               Working as full time machine learning engineer in top I.T firm of Pakistan.
+               Successfully led and completed various sales forecasting and computer vision
+               projects. My roles ranges from analyzing data, performing eda, to creating complete
+               machine/deep learning pipeline. Besides development also deployed model on 
+               cloud services like Amazon Sagemaker, Google AI Platform and Microsoft Azure.
+               So far built solutions for diverse industries like retail, mortgage, apparel
+               and computer vision. 
+              </p>
+            </div>
+            <!-- Innovative Solution -->
+            <div ><img src="images/is.png" height="150" width="200"/><br>
+              <p class="company">
+                Deep Learning Researcher
+              </p> 
+              <p class="job-date">
+                | April 2018 - June 2018
+              </p>
+            </div>
+            <p class="separator">
+             As a deep learning researcher I have worked on reinforcement based deep learning
+             chess engine inspired by Google Alpha Zero. My role was to monitor elo rating of 
+             chess engine, and to change tune model weight accordingly. I have worked on cutting
+             edge hardware technology like Nvidia DGX machine and also on famous deep learning framework
+             like google Tensorflow.
+            </p>
+            <!-- Royal Cyber -->
+            <div ><img src="images/rc.png" height="100" width="150"/><br>
+              <p class="company">
+                Java Developer
+              </p> 
+              <p class="job-date">
+                | August 2017 - December 2017
+              </p>
+            </div>
+            <p class="separator">
+             Started my career in Royal Cyber as java developer, where I worked as developer for
+             e-commerce applications. During my tenure I have worked on two primary e-commerce framework
+             including IBM WebSphere Portal Commerce and SAP Hybris Commerce. 
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end section experience -->
+
     <!-- start education-->
     <div id="education" class="education">
       <div class="container">
@@ -269,9 +302,9 @@
     <!-- start section portfolio -->
     <div id="portfolio" class="text-center paddsection">
       <div class="container">
-        <div class="section-title text-center">
-          <h2>My Portfolio</h2>
-        </div>
+        <p class="p-heading">
+          Portfolio
+        </p>
       </div>
 
       <div class="container">
@@ -292,7 +325,7 @@
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign"
               >
-                <a class="popup-img" href="images/portfolio/1.jpg">
+                <a href="blog-single.html">
                   <img src="images/portfolio/1.jpg" alt="img" />
                 </a>
               </div>
@@ -343,7 +376,7 @@
     </div>
     <!-- End section portfolio -->
 
-    <!-- start section journal -->
+    <!-- start section journal
     <div id="journal" class="text-left paddsection">
       <div class="container">
         <div class="section-title text-center">
@@ -420,7 +453,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End section journal -->
 
     <!-- start section contact -->
