updated intro line

--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">
-                Im machine learning engineer who loves to code, read research
-                papers and implement it. acquainted with exquisite data
-                analytics skills to come up with fruitful insight from data.
+                I love to build data intensive applications. I have expertise in building 
+                data driven applications which eventually turn data into valuable insight for business. 
+                I feel competent in creating data-intensive applications due to my prior expertise as a
+                Sr. Data Scientist, Sr Machine/Deep Learning Engineer, and Data Engineer.
               </p>
               <p class="separator">
                 Extensive experience in building machine learning solutions from
