updated about me

--- a/index.html
+++ b/index.html
@@ -108,16 +108,15 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">
-                I love to build data intensive applications. I have expertise in building 
-                data driven applications which eventually turn data into valuable insight for business. 
-                I feel competent in creating data-intensive applications due to my prior expertise as a
-                Sr. Data Scientist, Sr Machine/Deep Learning Engineer, and Data Engineer.
+                I love to build data intensive applications.
               </p>
               <p class="separator">
-                Extensive experience in building machine learning solutions from
-                scratch and deploy it on cloud services like Amazon, GCP and
-                Azure. More than 4 years of experience in building python based
-                solutions
+                I have expertise in building data driven applications which eventually turn data into 
+                valuable insight for business. I feel competent in creating data-intensive applications 
+                due to my prior expertise as a Sr. Data Scientist, Sr Machine/Deep Learning Engineer, 
+                and Data Engineer. <br>
+                I have more than 5 years of experience in building Data intensive application. So far created  
+                solutions in Databricks, Azure, AWS, and GCP for number of industries. 
               </p>
             </div>
           </div>
