1. Updated Work Experience 2. Updated Education

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <nav id="main-nav">
       <div class="row">
         <div class="container">
-          <div class="logo">
-            <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
+          <div >
+            <a href="index.html"><img src="images/wolf_of_data_logo.png"/></a>
           </div>
 
           <div class="responsive">
@@ -213,12 +213,77 @@
               <p class="p-heading">
                 Work Experience
               </p>
+              <!-- Royal CYber  -->
+              <div ><img src="images/rc.png" /><br>
+                <p class="company">
+                  Senior Data Consultant
+                </p> 
+                <p class="job-date">
+                  | Mar 2022 - Present
+                </p>
+              </div>
+              <p class="separator">
+                <ul>
+                  <li>Lead a team of Data Scientists/Engineers.</li>
+                  <li>Created a project winning POC for MLOps.</li>
+                  <li>Devloping Lakehouse architecute for Royal Cyber's clients.</li>
+                  <li>As a lead data engineer, I've created Data migration pipeline using Azure Data Factory.</li>
+                  <li>Migrated Azure Data Factory pipelines to Azure Databricks.</li>
+                  <li>Contributed as Data Engineer in one of project, in which I created Databricks Structured streaming
+                      pipelines, and built Lakehouse architecture using Delta Live tables, and Databricks Jobs.
+                  </li>
+                  <li>Working on following technologies:
+                      <ul>
+                        <li><i>Programming Languages:</i> Python, and SQL</li>   
+                        <li><i>Cloud:</i> AWS, and Azure</li>
+                        <li><i>Databases:</i> Microsoft SQL</li>
+                        <li><i>Big Data:</i> PySpark, and Databricks SQL</li>
+                        <li><i>ETL tools:</i> Databricks(Batch, and Structure Streaming), Kafka, and Azure ADF</li>
+                        <li><i>Machine Learning:</i> Scikit, and MlFlow</li>
+                      </ul>              
+                  </li> 
+                </ul>
+              </p>
+            </div>
+              <!-- Entertainer FZ LLC -->
+              <div ><img src="images/ent.jpeg" /><br><br>
+                <p class="company">
+                  Senior Data Scientist
+                </p> 
+                <p class="job-date">
+                  | Sep 2020 - Feb 2022
+                </p>
+              </div>
+              <p class="separator">
+                <ul>
+                  <li>Lead a team of Data Scientists and Data Engineers.</li>
+                  <li>Streamlined Big data pipeline for AD-hoc reporting.</li>
+                  <li>Created Big Data pipelines which handle more than 57 GB of data daily.</li>
+                  <li>Developed Recommendation Engine that generate precise recommendation for The Entertainer customers.
+                    Residing in 13 different regions across the globe.</li>
+                  <li>Contributed in creating Modern Data Architecture for The Entertainer for performing 
+                    Advanced Data Analaytics on data.</li>
+                  <li>Developed interactive dashbboard for visualizing Geo-Spatial data of Entertainer's customers.</li>
+                  <li>Worked on following technologies:
+                      <ul>
+                        <li><i>Programming Languages:</i> Python, and SQL</li>   
+                        <li><i>Cloud:</i> AWS, and Azure</li>
+                        <li><i>Databases:</i> SQL, MySQL, and MongoDB</li>
+                        <li><i>Big Data:</i> PySpark</li>
+                        <li><i>ETL tools:</i> Databricks</li>
+                        <li><i>Machine/Deep Learning:</i> Scikit, StatsModels, Tensorfow, and Turicreate.</li>
+                      </ul>              
+                  </li> 
+                </ul>
+              </p>
+            </div>
+              <!-- Systems Limited Solution -->
               <div ><img src="images/system.jpeg" /><br>
                 <p class="company">
                   Machine Learning Engineer 
                 </p> 
                 <p class="job-date">
-                  | June 2018 - Present
+                  | June 2018 - Aug 2020
                 </p>
               </div>
               <p class="separator">
@@ -248,7 +313,7 @@
              like google Tensorflow.
             </p>
             <!-- Royal Cyber -->
-            <div ><img src="images/rc.png" height="100" width="150"/><br>
+            <div ><img src="images/rc.png"/><br>
               <p class="company">
                 Java Developer
               </p> 
@@ -276,22 +341,36 @@
               <p class="p-heading">
                 Education
               </p>
+              <!-- UET LAHORE start -->
+              <div ><img src="images/uet.png" /><br>
+                <p class="school">
+                  Master of Computer Science
+                </p> 
+                <p class="job-date">
+                  | 2020 - 2022
+                </p>
+                <p class="separator">
+                  Pursuing a master degree in Computer Science with Specialization in Data Science. 
+                 </p>
+              </div>
+              <!-- NUCECS-FAST start -->
               <div ><img src="images/nuces.png" /><br>
                 <p class="school">
                   Bachelor of Computer Science
                 </p> 
                 <p class="job-date">
-                  | 2013 - 2018
+                  | 2013 - 2017
                 </p>
+                <p class="separator">
+                  Earned bachelor degree from prestigious education institute of Pakistan.
+                  My degree majors include data science, machine learning and AI. During 
+                  university time I was active student and participated in numerous 
+                  speed programming and sports competition. My Final Year Project was 
+                  intelligent chatbot targeted Telecom industry to replace their customer 
+                  support agent. 
+                 </p>
               </div>
-              <p class="separator">
-               Earned bachelor degree from prestigious education institute of Pakistan.
-               My degree majors include data science, machine learning and AI. During 
-               university time I was active student and participated in numerous 
-               speed programming and sports competition. My Final Year Project was 
-               intelligent chatbot targeted Telecom industry to replace their customer 
-               support agent. 
-              </p>
+              
             </div>
           </div>
         </div>
