update intro paragraph

--- a/index.html
+++ b/index.html
@@ -108,15 +108,11 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">
-                I love to build data intensive applications.
+                Exoert in building Data intensive applications.
               </p>
               <p class="separator">
-                I have expertise in building data driven applications which eventually turn data into 
-                valuable insight for business. I feel competent in creating data-intensive applications 
-                due to my prior expertise as a Sr. Data Scientist, Sr Machine/Deep Learning Engineer, 
-                and Data Engineer. <br>
-                I have more than 5 years of experience in building Data intensive application. So far created  
-                solutions in Databricks, Azure, AWS, and GCP for number of industries. 
+                I have more than 5 years of experience in building Data intensive application. I have developed solutions
+                on AWS, Azure, and Databricks. 
               </p>
             </div>
           </div>
