replace cloud solution with DE in services

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
         <div class="services-carousel owl-theme">
           <div class="services-block">
             <i class="ion-android-cloud-done"></i>
-            <span>Cloud solutions</span>
+            <span>Data Engineer</span>
             <p class="separator">
-              Skillful in moving applications to cloud. So far in my experience
-              I have deployed machine learning applications on Google AI
-              Platform, Amazon Sagemaker and Microsoft ML Studio.
+              From creating a Modern Dat Architecture, modernizing Datawarehouse to building
+              robust ETL/ELT pipeline. I can solve your problem and bring life to your data.
             </p>
           </div>
 
