--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav id="main-nav">
       <div class="row">
         <div class="container">
-          <div >
+          <div class="logo">
             <a href="index.html"><img src="images/wolf_of_data_logo.png"/></a>
           </div>
 
