started working on hospitality use case

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="portfolio-list">
               <ul class="nav list-unstyled" id="portfolio-flters">
                 <li class="filter filter-active" data-filter=".all">all</li>
-                <li class="filter" data-filter=".branding">branding</li>
+                <li class="filter" data-filter=".data_eng">Data Engineering</li>
                 <li class="filter" data-filter=".mockups">mockups</li>
                 <li class="filter" data-filter=".uikits">ui kits</li>
                 <li class="filter" data-filter=".webdesign">web design</li>
@@ -395,13 +395,17 @@
               </ul>
             </div>
 
-            <div class="portfolio-container">
+            <div class="portfolio-container ">
               <div
-                class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign"
+                class="col-lg-4 col-md-6 portfolio-thumbnail all data_eng uikits webdesign"
               >
-                <a href="blog-single.html">
-                  <img src="images/portfolio/1.jpg" alt="img" />
-                </a>
+                <a href="pages/hospitality.html">   
+                  <img class="image-overlay" src="images/portfolio/arch_diag_wat.png" alt="img" />
+                  <div >Advanced Machine Learning on Lakehouse Architecture
+                  </div>
+                
+                  
+                </a> 
               </div>
 
               <div
