--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         </div>
       </div>
     </div>
-    <!-- start sectoion contact -->
+    <!-- start section contact -->
 
     <!-- start section footer -->
     <div id="footer" class="text-center">
@@ -660,7 +660,7 @@
           </ul>
         </div>
 
-        <p>&copy; Copyrights WolfOfAI. All rights reserved.</p>
+        <p>&copy; Copyrights WolfOfData. All rights reserved.</p>
 
         <div class="credits">
           <!--
@@ -669,7 +669,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
         -->
-          Designed by WolfOfAI</a>
+          Designed by WolfOfData</a>
         </div>
       </div>
     </div>
