changed color of nav

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">
-                Exoert in building Data intensive applications.
+                Expert in building Data intensive applications.
               </p>
               <p class="separator">
                 I have more than 5 years of experience in building Data intensive application. I have developed solutions
