1. Changed title for hositality portfolio, 2. Remove extra icon, 3. Correct I'm javscript

--- a/pages/hospitality.html
+++ b/pages/hospitality.html
@@ -66,7 +66,7 @@
             <div class="col-md-12">
               <div class="block-main mb-30">
                 <div class="journal-txt">
-                  Advanced Machine Learning on Lakehouse Architecture
+                  Advanced Analytics on Lakehouse Architecture
                   <!-- <h4><a href="#">Advanced Machine Learning on Lakehouse Architecture</a></h4> -->
                 </div>
                 <img src="../images/portfolio/arch_diag_wat.png" class="img-responsive title-image" 
