--- a/index.html
+++ b/index.html
@@ -433,23 +433,14 @@
         <div class="socials-media text-center">
           <ul class="list-unstyled">
             <li>
-              <a href="#"><i class="ion-social-facebook"></i></a>
+              <a href="https://www.linkedin.com/in/mumaramanat/"><i class="ion-social-linkedin"></i></a>
             </li>
             <li>
-              <a href="#"><i class="ion-social-twitter"></i></a>
-            </li>
+              <a href="https://stackoverflow.com/users/6840305/muhammad-umar-amanat"><i class="ion-code"></i></a>
+            </li>  
             <li>
-              <a href="#"><i class="ion-social-instagram"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="ion-social-googleplus"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="ion-social-tumblr"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="ion-social-dribbble"></i></a>
-            </li>
+              <a href="https://www.upwork.com/freelancers/~01161f4c84d6531c94"><i class="ion-bag"></i></a>
+            </li>  
           </ul>
         </div>
 
