Added ssot project

--- a/index.html
+++ b/index.html
@@ -395,8 +395,15 @@
                   <div >Advanced Analytics on Lakehouse Architecture</div>              
                 </a> 
               </div>
+              <!-- SSOT start here -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-thumbnail all data_eng uikits webdesign">
+                <a href="pages/ssot.html">   
+                  <img class="image-overlay" src="images/portfolio/ssot_wat.png" alt="img" />
+                  <div >Single Source of Truth Using Databricks</div>              
+                </a> 
+              </div>
 
-              
             </div>
           </div>
         </div>
