--- a/pages/sagemaker_ml.html
+++ b/pages/sagemaker_ml.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Lakehouse Architecure</title>
+  <title>ML on Sagemaker</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
